Adding Contact us functionality

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^5.0.12",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.0.8",
     "next": "14.1.1",
     "react": "^18",
